syntax = "proto3";

package product;

// Product service definition
service ProductService {
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
  rpc GetProductsByCategory(GetProductsByCategoryRequest) returns (GetProductsResponse);
  rpc GetCategories(GetCategoriesRequest) returns (GetCategoriesResponse);
}

// Product message
message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string image_url = 5;
  repeated string category_ids = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

// Category message
message Category {
  string id = 1;
  string name = 2;
  string description = 3;
  string parent_id = 4;
  string image_url = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

// Request messages
message GetProductsRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
}

message GetProductsByCategoryRequest {
  string category_id = 1;
  int32 page = 2;
  int32 limit = 3;
  string search = 4;
}

message GetCategoriesRequest {
  string parent_id = 1;
}

// Response messages
message GetProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message GetCategoriesResponse {
  repeated Category categories = 1;
}